--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!--
-Template Name: Tailone - Tailwind One Page Template
-Author: Aribudin
-Website: https://www.tailwindtemplate.net
-Contact: support@tailwindtemplate.net
-Purchase: https://themes.tailwindtemplate.net/tailone
-License: You must have a valid license from official store to legally use the theme for your project.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -56,7 +48,7 @@ License: You must have a valid license from official store to legally use the th
 	            <div class="flex flex-row items-center py-4 lg:py-0">
 	              <div class="relative text-gray-900 hover:text-black block lg:hidden">
 	                <button type="button" class="menu-mobile block py-3 px-6 border-b-2 border-transparent">
-	                  <span class="sr-only">Mobile menu</span>
+	                  <span class="sr-only">Menu</span>
 	                  <svg class="open h-8 w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
 	                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
 	                  </svg>
