Correcion en Content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Title  -->
   <title>Campus TD</title>
-  <meta name="description" content="Tailwind One Page Template">
+  <meta name="description" content="">
 
   <!-- Development css -->
   <link rel="stylesheet" href="src/css/style.css">
