--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 						  <path fill="currentColor" d="M12 0.297c-6.63 0-12 5.373-12 12 0 5.302 3.438 9.8 8.205 11.387 0.6 0.113 0.82-0.263 0.82-0.583 0-0.288-0.01-1.049-0.015-2.055-3.338 0.724-4.042-1.61-4.042-1.61-0.546-1.387-1.333-1.757-1.333-1.757-1.087-0.744 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.76-1.605-2.665-0.305-5.467-1.335-5.467-5.931 0-1.31 0.467-2.381 1.235-3.221-0.123-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.322 3.301 1.23 0.957-0.266 1.983-0.399 3.003-0.404 1.02 0.005 2.047 0.138 3.006 0.404 2.291-1.552 3.297-1.23 3.297-1.23 0.653 1.653 0.241 2.874 0.118 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.43 0.372 0.823 1.103 0.823 2.222 0 1.606-0.015 2.898-0.015 3.293 0 0.322 0.216 0.698 0.825 0.579 4.765-1.59 8.2-6.087 8.2-11.385 0-6.627-5.373-12-12-12z"></path>
 						</svg>
 					  </a>
-					  <a class="hover:text-blue-700" aria-label="Linkedin link" href="#" target="_blank">
+					  <a class="hover:text-blue-700" aria-label="Linkedin link" href="https://www.linkedin.com" target="_blank">
 						<!-- Icono de LinkedIn -->
 						<svg xmlns="http://www.w3.org/2000/svg" class="inline-block" width="1rem" height="1rem" viewBox="0 0 512 512"><path fill="currentColor" d="M444.17,32H70.28C49.85,32,32,46.7,32,66.89V441.61C32,461.91,49.85,480,70.28,480H444.06C464.6,480,480,461.79,480,441.61V66.89C480.12,46.7,464.6,32,444.17,32ZM170.87,405.43H106.69V205.88h64.18ZM141,175.54h-.46c-20.54,0-33.84-15.29-33.84-34.43,0-19.49,13.65-34.42,34.65-34.42s33.85,14.82,34.31,34.42C175.65,160.25,162.35,175.54,141,175.54ZM405.43,405.43H341.25V296.32c0-26.14-9.34-44-32.56-44-17.74,0-28.24,12-32.91,23.69-1.75,4.2-2.22,9.92-2.22,15.76V405.43H209.38V205.88h64.18v27.77c9.34-13.3,23.93-32.44,57.88-32.44,42.13,0,74,27.77,74,87.64Z"></path></svg>
 					  </a>
@@ -419,7 +419,7 @@
 						  <path fill="currentColor" d="M12 0.297c-6.63 0-12 5.373-12 12 0 5.302 3.438 9.8 8.205 11.387 0.6 0.113 0.82-0.263 0.82-0.583 0-0.288-0.01-1.049-0.015-2.055-3.338 0.724-4.042-1.61-4.042-1.61-0.546-1.387-1.333-1.757-1.333-1.757-1.087-0.744 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.76-1.605-2.665-0.305-5.467-1.335-5.467-5.931 0-1.31 0.467-2.381 1.235-3.221-0.123-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.322 3.301 1.23 0.957-0.266 1.983-0.399 3.003-0.404 1.02 0.005 2.047 0.138 3.006 0.404 2.291-1.552 3.297-1.23 3.297-1.23 0.653 1.653 0.241 2.874 0.118 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.43 0.372 0.823 1.103 0.823 2.222 0 1.606-0.015 2.898-0.015 3.293 0 0.322 0.216 0.698 0.825 0.579 4.765-1.59 8.2-6.087 8.2-11.385 0-6.627-5.373-12-12-12z"></path>
 						</svg>
 					  </a>
-					  <a class="hover:text-blue-700" aria-label="Linkedin link" href="#" target="_blank">
+					  <a class="hover:text-blue-700" aria-label="Linkedin link" href="https://www.linkedin.com" target="_blank">
 						<!-- Icono de LinkedIn -->
 						<svg xmlns="http://www.w3.org/2000/svg" class="inline-block" width="1rem" height="1rem" viewBox="0 0 512 512"><path fill="currentColor" d="M444.17,32H70.28C49.85,32,32,46.7,32,66.89V441.61C32,461.91,49.85,480,70.28,480H444.06C464.6,480,480,461.79,480,441.61V66.89C480.12,46.7,464.6,32,444.17,32ZM170.87,405.43H106.69V205.88h64.18ZM141,175.54h-.46c-20.54,0-33.84-15.29-33.84-34.43,0-19.49,13.65-34.42,34.65-34.42s33.85,14.82,34.31,34.42C175.65,160.25,162.35,175.54,141,175.54ZM405.43,405.43H341.25V296.32c0-26.14-9.34-44-32.56-44-17.74,0-28.24,12-32.91,23.69-1.75,4.2-2.22,9.92-2.22,15.76V405.43H209.38V205.88h64.18v27.77c9.34-13.3,23.93-32.44,57.88-32.44,42.13,0,74,27.77,74,87.64Z"></path></svg>
 					  </a>
@@ -449,7 +449,7 @@
 						  <path fill="currentColor" d="M12 0.297c-6.63 0-12 5.373-12 12 0 5.302 3.438 9.8 8.205 11.387 0.6 0.113 0.82-0.263 0.82-0.583 0-0.288-0.01-1.049-0.015-2.055-3.338 0.724-4.042-1.61-4.042-1.61-0.546-1.387-1.333-1.757-1.333-1.757-1.087-0.744 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.76-1.605-2.665-0.305-5.467-1.335-5.467-5.931 0-1.31 0.467-2.381 1.235-3.221-0.123-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.322 3.301 1.23 0.957-0.266 1.983-0.399 3.003-0.404 1.02 0.005 2.047 0.138 3.006 0.404 2.291-1.552 3.297-1.23 3.297-1.23 0.653 1.653 0.241 2.874 0.118 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.43 0.372 0.823 1.103 0.823 2.222 0 1.606-0.015 2.898-0.015 3.293 0 0.322 0.216 0.698 0.825 0.579 4.765-1.59 8.2-6.087 8.2-11.385 0-6.627-5.373-12-12-12z"></path>
 						</svg>
 					  </a>
-					  <a class="hover:text-blue-700" aria-label="Linkedin link" href="#" target="_blank">
+					  <a class="hover:text-blue-700" aria-label="Linkedin link" href="https://www.linkedin.com" target="_blank">
 						<!-- Icono de LinkedIn -->
 						<svg xmlns="http://www.w3.org/2000/svg" class="inline-block" width="1rem" height="1rem" viewBox="0 0 512 512"><path fill="currentColor" d="M444.17,32H70.28C49.85,32,32,46.7,32,66.89V441.61C32,461.91,49.85,480,70.28,480H444.06C464.6,480,480,461.79,480,441.61V66.89C480.12,46.7,464.6,32,444.17,32ZM170.87,405.43H106.69V205.88h64.18ZM141,175.54h-.46c-20.54,0-33.84-15.29-33.84-34.43,0-19.49,13.65-34.42,34.65-34.42s33.85,14.82,34.31,34.42C175.65,160.25,162.35,175.54,141,175.54ZM405.43,405.43H341.25V296.32c0-26.14-9.34-44-32.56-44-17.74,0-28.24,12-32.91,23.69-1.75,4.2-2.22,9.92-2.22,15.76V405.43H209.38V205.88h64.18v27.77c9.34-13.3,23.93-32.44,57.88-32.44,42.13,0,74,27.77,74,87.64Z"></path></svg>
 					  </a>
@@ -479,7 +479,7 @@
 						  <path fill="currentColor" d="M12 0.297c-6.63 0-12 5.373-12 12 0 5.302 3.438 9.8 8.205 11.387 0.6 0.113 0.82-0.263 0.82-0.583 0-0.288-0.01-1.049-0.015-2.055-3.338 0.724-4.042-1.61-4.042-1.61-0.546-1.387-1.333-1.757-1.333-1.757-1.087-0.744 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.76-1.605-2.665-0.305-5.467-1.335-5.467-5.931 0-1.31 0.467-2.381 1.235-3.221-0.123-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.322 3.301 1.23 0.957-0.266 1.983-0.399 3.003-0.404 1.02 0.005 2.047 0.138 3.006 0.404 2.291-1.552 3.297-1.23 3.297-1.23 0.653 1.653 0.241 2.874 0.118 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.43 0.372 0.823 1.103 0.823 2.222 0 1.606-0.015 2.898-0.015 3.293 0 0.322 0.216 0.698 0.825 0.579 4.765-1.59 8.2-6.087 8.2-11.385 0-6.627-5.373-12-12-12z"></path>
 						</svg>
 					  </a>
-					  <a class="hover:text-blue-700" aria-label="Linkedin link" href="#" target="_blank">
+					  <a class="hover:text-blue-700" aria-label="Linkedin link" href="https://www.linkedin.com/in/alex-arath-gs" target="_blank">
 						<!-- Icono de LinkedIn -->
 						<svg xmlns="http://www.w3.org/2000/svg" class="inline-block" width="1rem" height="1rem" viewBox="0 0 512 512"><path fill="currentColor" d="M444.17,32H70.28C49.85,32,32,46.7,32,66.89V441.61C32,461.91,49.85,480,70.28,480H444.06C464.6,480,480,461.79,480,441.61V66.89C480.12,46.7,464.6,32,444.17,32ZM170.87,405.43H106.69V205.88h64.18ZM141,175.54h-.46c-20.54,0-33.84-15.29-33.84-34.43,0-19.49,13.65-34.42,34.65-34.42s33.85,14.82,34.31,34.42C175.65,160.25,162.35,175.54,141,175.54ZM405.43,405.43H341.25V296.32c0-26.14-9.34-44-32.56-44-17.74,0-28.24,12-32.91,23.69-1.75,4.2-2.22,9.92-2.22,15.76V405.43H209.38V205.88h64.18v27.77c9.34-13.3,23.93-32.44,57.88-32.44,42.13,0,74,27.77,74,87.64Z"></path></svg>
 					  </a>
@@ -490,9 +490,11 @@
 		    </div>
 		</div><!-- end row -->
 	</div>
+	<data id="contact"></data>
 </div><!-- End Team-->
 
 		<!-- contact start -->
+	
 		<div id="contact" class="section relative pb-20 bg-white dark:bg-gray-800">
 		  <div class="container xl:max-w-6xl mx-auto px-4">
 		    <div class="flex flex-wrap flex-row -mx-4 justify-center">
@@ -560,32 +562,20 @@
 			</div>
 			<p>Campus TD es una empresa dedicada al desarrollo tecnológico en diversas áreas como páginas web, aplicaciones móviles y de escritorio, IoT, y soluciones personalizadas para cada cliente.</p>
 			<ul class="space-x-3 mt-6 mb-6 lg:mb-0">
-			  <!-- Facebook -->
-			  <li class="inline-block">
-				<a target="_blank" class="hover:text-gray-800" rel="noopener noreferrer" href="https://facebook.com" title="Facebook">
-				  <!-- Icono de Facebook -->
-				  <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 512 512"><path fill="currentColor" d="M455.27,32H56.73A24.74,24.74,0,0,0,32,56.73V455.27A24.74,24.74,0,0,0,56.73,480H256V304H202.45V240H256V189c0-57.86,40.13-89.36,91.82-89.36,24.73,0,51.33,1.86,57.51,2.68v60.43H364.15c-28.12,0-33.48,13.3-33.48,32.9V240h67l-8.75,64H330.67V480h124.6A24.74,24.74,0,0,0,480,455.27V56.73A24.74,24.74,0,0,0,455.27,32Z"></path></svg>
-				</a>
-			  </li>
+			  
 			   <!-- GitHub -->
-<li class="inline-block">
-	<a target="_blank" class="hover:text-gray-800" rel="noopener noreferrer" href="https://github.com/Campus-TD" title="GitHub">
-	  <!-- Icono de GitHub -->
-	  <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 24 24">
-		<path fill="currentColor" d="M12 0.297c-6.63 0-12 5.373-12 12 0 5.302 3.438 9.8 8.205 11.387 0.6 0.113 0.82-0.263 0.82-0.583 0-0.288-0.01-1.049-0.015-2.055-3.338 0.724-4.042-1.61-4.042-1.61-0.546-1.387-1.333-1.757-1.333-1.757-1.087-0.744 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.76-1.605-2.665-0.305-5.467-1.335-5.467-5.931 0-1.31 0.467-2.381 1.235-3.221-0.123-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.322 3.301 1.23 0.957-0.266 1.983-0.399 3.003-0.404 1.02 0.005 2.047 0.138 3.006 0.404 2.291-1.552 3.297-1.23 3.297-1.23 0.653 1.653 0.241 2.874 0.118 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.43 0.372 0.823 1.103 0.823 2.222 0 1.606-0.015 2.898-0.015 3.293 0 0.322 0.216 0.698 0.825 0.579 4.765-1.59 8.2-6.087 8.2-11.385 0-6.627-5.373-12-12-12z"></path>
+	<li class="inline-block">
+		<a target="_blank" class="hover:text-gray-800" rel="noopener noreferrer" href="https://github.com/Campus-TD" 	title="GitHub">
+	  	<!-- Icono de GitHub -->
+	  	<svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 24 24">
+			<path fill="currentColor" d="M12 0.297c-6.63 0-12 5.373-12 12 0 5.302 3.438 9.8 8.205 11.387 0.6 0.113 0.82-0.263 0.82-0.583 0-0.288-0.01-1.049-0.015-2.055-3.338 0.724-4.042-1.61-4.042-1.61-0.546-1.387-1.333-1.757-1.333-1.757-1.087-0.744 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.76-1.605-2.665-0.305-5.467-1.335-5.467-5.931 0-1.31 0.467-2.381 1.235-3.221-0.123-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.322 3.301 1.23 0.957-0.266 1.983-0.399 3.003-0.404 1.02 0.005 2.047 0.138 3.006 0.404 2.291-1.552 3.297-1.23 3.297-1.23 0.653 1.653 0.241 2.874 0.118 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.43 0.372 0.823 1.103 0.823 2.222 0 1.606-0.015 2.898-0.015 3.293 0 0.322 0.216 0.698 0.825 0.579 4.765-1.59 8.2-6.087 8.2-11.385 0-6.627-5.373-12-12-12z"></path>
 	  </svg>
 	</a>
   </li>
-			  <!-- YouTube -->
-			  <li class="inline-block">
-				<a target="_blank" class="hover:text-gray-800" rel="noopener noreferrer" href="https://youtube.com" title="YouTube">
-				  <!-- Icono de YouTube -->
-				  <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 512 512"><path fill="currentColor" d="M508.64,148.79c0-45-33.1-81.2-74-81.2C379.24,65,322.74,64,265,64H247c-57.6,0-114.2,1-169.6,3.6-40.8,0-73.9,36.4-73.9,81.4C1,184.59-.06,220.19,0,255.79q-.15,53.4,3.4,106.9c0,45,33.1,81.5,73.9,81.5,58.2,2.7,117.9,3.9,178.6,3.8q91.2.3,178.6-3.8c40.9,0,74-36.5,74-81.5,2.4-35.7,3.5-71.3,3.4-107Q512.24,202.29,508.64,148.79ZM207,353.89V157.39l145,98.2Z"></path></svg>
-				</a>
-			  </li>
+			  
 			  <!-- Instagram -->
 			  <li class="inline-block">
-				<a target="_blank" class="hover:text-gray-800" rel="noopener noreferrer" href="https://instagram.com" title="Instagram">
+				<a target="_blank" class="hover:text-gray-800" rel="noopener noreferrer" href="https://www.instagram.com/campus_td?igsh=ajFrZ3lpNWc1cHRv" title="Instagram">
 				  <!-- Icono de Instagram -->
 				  <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 512 512"><path fill="currentColor" d="M349.33,69.33a93.62,93.62,0,0,1,93.34,93.34V349.33a93.62,93.62,0,0,1-93.34,93.34H162.67a93.62,93.62,0,0,1-93.34-93.34V162.67a93.62,93.62,0,0,1,93.34-93.34H349.33m0-37.33H162.67C90.8,32,32,90.8,32,162.67V349.33C32,421.2,90.8,480,162.67,480H349.33C421.2,480,480,421.2,480,349.33V162.67C480,90.8,421.2,32,349.33,32Z"></path><path fill="currentColor" d="M377.33,162.67a28,28,0,1,1,28-28A27.94,27.94,0,0,1,377.33,162.67Z"></path><path fill="currentColor" d="M256,181.33A74.67,74.67,0,1,1,181.33,256,74.75,74.75,0,0,1,256,181.33M256,144A112,112,0,1,0,368,256,112,112,0,0,0,256,144Z"></path></svg>
 				</a>
